--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Section 2: Fondamentaux du langage JavaScript</title>
+        <script src="OCR-starter/chapitre3_exercice2.js" defer></script>
     </head>
 
     <body>
         <h1>Section 2: Fondamentaux du langage JavaScript</h1>
-        <script src="starter/script014.js"></script>
     </body>
 </html>
