--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Section 2: Fondamentaux du langage JavaScript</title>
-        <script src="OCR-starter/chapitre3_exercice3.js" defer></script>
+        <script src="starter/script016.js" defer></script>
     </head>
 
     <body>
